// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components|Forms/RadioInput checked 1`] = `
<div
  className="radio-input"
  onClick={[Function]}
>
  <input
    checked={true}
    className="radio-input__input"
    type="radio"
  />
  <div
    className="radio-input__mock radio-input__mock--checked"
  />
  <label
    className="radio-input__label"
  >
    My radio input
  </label>
</div>
`;

exports[`Storyshots components|Forms/RadioInput default 1`] = `
<div
  className="radio-input"
  onClick={[Function]}
>
  <input
    checked={false}
    className="radio-input__input"
    type="radio"
  />
  <div
    className="radio-input__mock"
  />
  <label
    className="radio-input__label"
  >
    My radio input
  </label>
</div>
`;

exports[`Storyshots components|Forms/RadioInput with handler 1`] = `
<div
  style={
    Object {
      "maxWidth": "500px",
    }
  }
>
  <div
    className="radio-input"
    onClick={[Function]}
  >
    <input
      checked={false}
      className="radio-input__input"
      type="radio"
    />
    <div
      className="radio-input__mock"
    />
    <label
      className="radio-input__label"
    >
      My radio input
    </label>
  </div>
</div>
`;
